fix: fix layout bug

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -26,7 +26,7 @@
   --green: #108775;
   --green-light: #00c58e;
   --dark: #2f495e;
-  --blue-light: #5189c2;
+  --blue-dark: #5189c2;
   --main-bgc: #f5f2f0;
   --hover-bgc: #fffcfa;
   --grey-light: rgba(0, 0, 0, 0.07);
